Fix glitch with PLP product grid where the tiles had a right gap
Thanks to @renatamottam again.

--- a/src/styles/pages/plp.scss
+++ b/src/styles/pages/plp.scss
@@ -83,6 +83,8 @@
     padding: 0;
     background-color: unset;
   }
+
+  .product-card[data-store-card] { min-width: 100%; }
 }
 
 .plp-results-sponsored {
